import("//UI/enable_qt.gni")
import("//UI/link_qt.gni")
import("//UI/moc_qt_objects.gni")
import("//Meta/gn/build/libs/pulse/enable.gni")

moc_qt_objects("generate_moc") {
  sources = [ "//UI/Qt/EventLoopImplementationQtEventTarget.h" ]
}

link_qt("WebContent_qt") {
  qt_components = [ "Core" ]
}

executable("WebContent") {
  configs += [ "//UI:ladybird_config" ]
  include_dirs = [
    "//UI",
    "//Services",
  ]
  deps = [
    "//AK",
    "//Meta/gn/build/libs/fontconfig",
    "//Meta/gn/build/libs/pulse",
    "//Libraries/LibCore",
    "//Libraries/LibFileSystem",
    "//Libraries/LibGfx",
    "//Libraries/LibIPC",
    "//Libraries/LibImageDecoderClient",
    "//Libraries/LibJS",
    "//Libraries/LibMain",
    "//Libraries/LibRequests",
    "//Libraries/LibURL",
    "//Libraries/LibWeb",
    "//Libraries/LibWebSocket",
    "//Libraries/LibWebView",
    "//Libraries/LibWebView:WebContentClientEndpoint",
    "//Libraries/LibWebView:WebContentServerEndpoint",
    "//Libraries/LibWebView:WebDriverClientEndpoint",
    "//Libraries/LibWebView:WebDriverServerEndpoint",
  ]
  sources = [
    "//UI/FontPlugin.cpp",
    "//UI/HelperProcess.cpp",
    "//UI/ImageCodecPlugin.cpp",
    "//UI/Utilities.cpp",
    "//Services/WebContent/BackingStoreManager.cpp",
    "//Services/WebContent/ConnectionFromClient.cpp",
    "//Services/WebContent/ConsoleGlobalEnvironmentExtensions.cpp",
    "//Services/WebContent/PageClient.cpp",
    "//Services/WebContent/PageHost.cpp",
    "//Services/WebContent/WebContentConsoleClient.cpp",
    "//Services/WebContent/WebDriverConnection.cpp",
    "main.cpp",
  ]

  if (enable_qt) {
    defines = [ "HAVE_QT" ]
    configs += [ ":WebContent_qt" ]
    sources += [
      "//UI/Qt/EventLoopImplementationQt.cpp",
      "//UI/Qt/EventLoopImplementationQtEventTarget.cpp",
      "//UI/Qt/StringUtils.cpp",
    ]

    sources += get_target_outputs(":generate_moc")
    deps += [ ":generate_moc" ]
  }

  output_dir = "$root_out_dir/libexec"
}
