import("//UI/link_qt.gni")

executable("WebDriver") {
  configs += [ "//UI:ladybird_config" ]
  include_dirs = [
    "//UI",
    "//Userland/Services",
  ]
  data_deps = [
    "//UI:headless-browser",
    "//UI:ladybird_executable",
  ]
  deps = [
    "//AK",
    "//Userland/Libraries/LibCore",
    "//Userland/Libraries/LibFileSystem",
    "//Userland/Libraries/LibGfx",
    "//Userland/Libraries/LibIPC",
    "//Userland/Libraries/LibJS",
    "//Userland/Libraries/LibMain",
    "//Userland/Libraries/LibURL",
    "//Userland/Libraries/LibWeb",
    "//Userland/Libraries/LibWebSocket",
    "//Userland/Libraries/LibWebView:WebDriverClientEndpoint",
    "//Userland/Libraries/LibWebView:WebDriverServerEndpoint",
  ]
  sources = [
    "//UI/Utilities.cpp",
    "//Userland/Services/WebDriver/Client.cpp",
    "//Userland/Services/WebDriver/Session.cpp",
    "//Userland/Services/WebDriver/WebContentConnection.cpp",
    "main.cpp",
  ]
}
